Fix content spacing layout for the about page

--- a/app/assets/stylesheets/layouts/l-about.scss
+++ b/app/assets/stylesheets/layouts/l-about.scss
@@ -1,10 +1,4 @@
 .l-about {
-  // @include header_veil;
-
-  .l-content {
-    transform: translate(0, -50px);
-  }
-
   .l-section {
     position: relative;
     padding: 0 0 25px;
